// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ignore path 1`] = `
"not-ignored.js
regular-module.js
"
`;

exports[`support .prettierignore 1`] = `
"not-ignored.js
other-regular-modules.js
"
`;

exports[`support multiple ignore-paths 1`] = `
"not-ignored.js
"
`;
